--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>「 Período regencial 」</title>
-    <link rel="shortcut icon" href="imagens/logo.png" type="image/x-icon">
+    <title>「 S𝖎𝖘𝖙𝖊𝖒𝖆 𝖘𝖔𝖑𝖆𝖗 」</title>
+    <link rel="shortcut icon" href="imagens/favlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <div id="topo" style="text-align: center; background-color: #f4f4ff; border: 15px double rgb(15, 15, 15);"><a href="index.html"><img height="90" width="90" src="imagens/logo.png"></a></div>
+    <div id="topo" style="text-align: center; background-color: #f4f4ff; border: 15px double rgb(35, 26, 66)"><a href="index.html"><img height="90" width="90" src="imagens/logo.png"></a></div>
 
 <div>
     <div><p>O objetivo desse documento é a resenha crítica sobre o período regencial, trataremos do período Regência com resumos, tendo como base os slides da aula, e inserção de conteúdos de outras fontes para maior visão, como também visão por outros lados, além da análise critica final, como conclusão. Durou entre o intervalo de tempo do fim do primeiro reinado e início do segundo reinado, dado num contexto onde o imperador, D. Pedro II, é inserido ainda jovem, com apenas 5 anos, em 1824 tinha artigos como Art. 121. (Imperador é menor de idade até os 18 anos); Art. 122. (Durante a sua menoridade, o Império será governado por uma Regência); Art. 123. (Caso não tenha parentes que atendam os requisitos, haverá uma Regência permanente).</p></div>
 </div>
 <div class="blocos">
-    <div class="borda icon" style="background-image: url(imagens/logoregencial.jpg); margin: auto;"></div>
-    <div class="infoplanet"><p style="font-size: 26px;">Aqui estão os principais resumo acerca do período Regência. Veja no seguinte link: <a class="link" href="regencial.html">período regêncial</a>.</p></div>
+    <div class="icon borda" style="background-image: url(imagens/logoregencial.jpg);"></div>
+    <div class="infoplanet" style="font-size: 26px;"><p>Aqui estão os principais resumo acerca do período Regência. Veja no seguinte link: <a class="link" href="regencial.html">período regêncial</a>.</p></div>
 
-    <div class="borda icon" style="background-image: url(imagens/logoanalise.jpg); margin: auto"></div>
-    <div class="infoplanet"><p style="font-size: 26px;">Aqui está a análise acerca do período regência, e dos conteúdos utilizados. Veja no seguinte link: <a class="link" href="analise.html">análise crítica</a>.</p></div>
+    <div class="icon borda" style="background-image: url(imagens/logoanalise.jpg);"></div>
+    <div class="infoplanet" style="font-size: 26px;"><p>OAqui está a análise acerca do período regência, e dos conteúdos utilizados. Veja no seguinte link: <a class="link" href="analise.html">análise crítica</a>.</p></div>
 
+</div>
 
 <div class="fonte">
     <p>Criadores: Joenyr Couto, Paulo Tanini e Willyans Chen.</p>
-    <a href="fontes.html"><button class="botao"><p class="letrabotao">Fontes</p></button></a>
+    <a href="fontes.html"><button class="botao"><p class="letrabotao">fontes</p></button></a>
     <a href="#topo"><button class="botao"><p class="letrabotao">topo</p></button></a></div>
 </body>
 </html>
