--- a/analise.html
+++ b/analise.html
@@ -14,7 +14,7 @@
     <div class="titulo titulo transp bordabaixa" style="margin-bottom: 75px;">
         <h1>· Análise crítica</h1>
     </div>
-    <div class="transp bordaanalise" style="text-align: justify; margin: auto; width: 440px; font-size: large;">
+    <div class="transp bordaanalise" style="text-align: justify; margin: auto; width: 70%; font-size: large;">
     <p>Acerca do conteúdo, temos a seguinte conclusão e análise crítica: Observemos que o período foi muito movimentado, ora, pois há grandes acontecimentos em pouco tempo, não só isso, como também, muitos acontecimentos simultâneos, Dom pedro I vira ex-imperador, por grande pressão sofrida, Dom Pedro II vira príncipe regente, o qual não pode entrar numa mesma instância ao poder (ser coroado) por causa de sua idade (os artigos da época não permitiam e tinha contra-medidas para o acontecimento), daí saindo regências como a provisória e permanente, além de outros grupos (liberais moderados e exaltados), mas que acabaram sendo destrinchados com o golpe da maior idade, por necessidade da centralização do poder para equilíbrio de rebeliões nas províncias, onde Dom Pedro I é coroado aos seus 13 anos, antes mesmo dos 18. Esses são os grandes e rápidos acontecimentos citados, mas por que também há o aspecto da mutualidade? Pois isso não era a única coisa acontecendo, havia muitas revoltas, exemplo, por grupos populares, que deixavam as grandes elites atentas para não ter acontecimento igual aos países vizinhos (divisão de território); Guarda nacional de cidadãos eleitores criada para ser o corpo militar comandado por fazendeiros para intervir revoltas locais e rebeliões escravas.
 
     </p></div>
