--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>「 S𝖎𝖘𝖙𝖊𝖒𝖆 𝖘𝖔𝖑𝖆𝖗 」</title>
+    <title>「 Período regencial 」</title>
     <link rel="shortcut icon" href="imagens/favlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
