--- a/fontes.html
+++ b/fontes.html
@@ -50,7 +50,7 @@ https://www.google.com/amp/s/www.preparaenem.com/amp/historia-do-brasil/ato-adic
 <br><br>
 
 https://revistaesmeril.com.br/hoje-na-historia-queremos-pedro-ii-o-golpe-da-maioridade/ (imagem do golpe da maioridade)
-    midjourney (logo de análise e do site)</p></div>
+    <br><br>midjourney (logo de análise e do site)</p></div>
     </div>
 </div>
 
